--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -6,7 +6,7 @@
         <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
           {% if site.title == 'blank' %}
             {% if site.first_name %}
-              <span class="font-weight-bold">
+              <span>
                 {{- site.first_name -}}
               </span>
             {% endif %}
@@ -107,6 +107,10 @@
               {% endif %}
             {% endif %}
           {% endfor %}
+          
+          <!-- CV -->
+          <li class="nav-item"><a class="nav-link" href="/assets/pdf/CV.pdf">CV</a></li> 
+
           {% if site.search_enabled %}
             <!-- Search -->
             <li class="nav-item">
