--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -751,6 +751,13 @@ footer.sticky-bottom {
         }
         a.award.btn {
           border-color: var(--global-highlight-color);
+          color: var(--global-highlight-color);
+
+          &:hover {
+            color: var(--global-bg-color);
+            background-color: var(--global-highlight-color);
+            border: 1px solid var(--global-bg-color);
+          }
         }
       }
 
